cambios en home

--- a/cafeWeb/cafeWebApp/templates/cafeWebApp/base.html
+++ b/cafeWeb/cafeWebApp/templates/cafeWebApp/base.html
@@ -38,7 +38,7 @@
     </nav>
 
     <!-- Contenido de la página -->
-    <div class="container mt-4">
+    <div class="card mt-4">
         {% block content %}
         {% endblock %}
     </div>
