--- a/cafeWeb/cafeWebApp/templates/cafeWebApp/base.html
+++ b/cafeWeb/cafeWebApp/templates/cafeWebApp/base.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/gestion.css' %}">
+    
 </head>
 <body>
 
@@ -38,11 +40,11 @@
     </nav>
 
     <!-- Contenido de la página -->
-    <div class="card mt-4">
-        {% block content %}
-        {% endblock %}
-    </div>
-
+    <div>
+      {% block content %}
+      {% endblock %}
+  </div>
+        
     <!-- Bootstrap JS -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
