--- a/cafeWeb/tienda/templates/tienda/tienda.html
+++ b/cafeWeb/tienda/templates/tienda/tienda.html
@@ -6,17 +6,29 @@ Tienda
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="text-center mb-4">¡Selecciona tus favoritos!</h1>
+    <h1 class="text-left mb-4">¡Selecciona tus favoritos!</h1>
 
-    <div class="row justify-content-center">
+    <div style="float: right;">
+        
+
+        {% include "carro/widget.html" %}
+    </div>
+
+    <div class="row">
 
         {% for producto in productos %}
         <div class="col-md-6 col-lg-4 mb-4">
             <div class="card shadow-sm h-100">
                 <img src="{{ producto.imagen.url }}" class="card-img-top img-fluid p-3" alt="{{producto.nombre}}" style="max-height:300px; object-fit:cover;">
+                
                 <div class="card-body text-center">
                     <h2 class="h5">{{ producto.nombre }}</h2>
                     <p class="card-text"> Especialidad del chef</p>
+                    <p class="card-text"> &nbsp;${{producto.precio}}</p>
+                </div>
+
+                <div class="card-footer text-center">
+                    <a href="{% url 'carro:agregar' producto.id %}" class="btn btn-success"> Agregar </a>
                 </div>
             </div>
         </div>
